Deployed but ive not added the delete and edit button

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	min-height: 70vh;
-	background: #43AFFC;
+	background: #000000;
 }
 
 /* loadinganimation */
