--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 }
 
 .progress-loader {
-	width: 150px;
+	width: 200px;
 	background: rgba(0, 0, 0, 0.253);
 	height: 3px;
 	border-radius: 7px;
@@ -47,7 +47,7 @@ body {
 	border-radius: 7px;
 	background: rgb(255, 255, 255);
 	transition: 0.5s;
-	animation: loading1274 2s ease infinite;
+	animation: loading1274 7s ease-in-out infinite;
 }
 
 @keyframes loading1274 {
@@ -79,7 +79,7 @@ body {
 	width: 89%;
 	max-width: 500px;
 	background: #ffffff;
-	color: rgb(0, 0, 0);
+	color: #000000;
 	border: 5px solid #43AFFC;
 	border-radius: 13px;
 }
@@ -132,7 +132,7 @@ body {
 	box-shadow: 0 0 1px transparent;
 }
 .ifelsedisplay{
-	padding-top: 3.2em;
+	padding-top: 5em;
 	display: flex;
 	flex-direction: column;
 	text-align: center;
